main/bin/main.78562.temp/main.log
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:75:6: warning: scoped enumerations are a C++11 extension
enum struct Severity {
     ^
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:236:51: error: expected ';' after expression
                        StateT[index].current += 1
                                                  ^
                                                  ;
1 warning and 1 error generated.
